added default constructors with list/set initializers to DeviceDefinition and MeasurementDefinition; added some unit tests for DefinitionUpdateUtil (DefinitionUpdateUtilTests)